clusters/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethereum-mainnet
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: helm-repos
---
