clusters/local/release-eth-sepolia.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ethereum-sepolia
