clusters/local/release-route-counter.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: route-counter-dev
